--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Texto
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <h1>Primera pagina</h1>
+</head>
+<body>
+    
+</body>
+</html>
